generated/SimaiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Simai.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MuConvert.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SimaiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, WS=14, COMMENT=15, COMMA=16, TOUCH_RADIUS=17, 
		NOTE_SKIN=18, BORROW_PATH=19, TAP_TO_STAR=20, OVERLAY_STREAM=21, WAVE_TIME_SIG=22, 
		STAR_TO_TAP=23, NO_STAR=24, KEY=25, TOUCH_AREA=26, NOISE_ZONE=27, D_ZONE=28, 
		SLIDE_CODE=29, SLIDE_TYPE=30, INT=31, CHART_END=32, COMMAND=33, MODIFIER=34, 
		FALSE_EACH=35;
	public const int
		RULE_noteSkin = 0, RULE_radiusOverride = 1, RULE_slideType = 2, RULE_int = 3, 
		RULE_number = 4, RULE_modifiers = 5, RULE_chart = 6, RULE_notations = 7, 
		RULE_overlayStream = 8, RULE_waveTimeSig = 9, RULE_noteGroup = 10, RULE_eachNote = 11, 
		RULE_bpmTag = 12, RULE_absulouteStepTag = 13, RULE_metTag = 14, RULE_commandTag = 15, 
		RULE_note = 16, RULE_noiseZone = 17, RULE_borrowedNote = 18, RULE_borrowedCarrierPart = 19, 
		RULE_slideCodeNote = 20, RULE_tap = 21, RULE_touchStar = 22, RULE_hold = 23, 
		RULE_tapHold = 24, RULE_touch = 25, RULE_touchHold = 26, RULE_duration = 27, 
		RULE_beats = 28, RULE_slideDuration = 29, RULE_waitTime = 30, RULE_asBpm = 31, 
		RULE_slide = 32, RULE_touchHead = 33, RULE_sharedHeadSlide = 34, RULE_slideBody = 35, 
		RULE_holdSlideHead = 36, RULE_touchHoldSlideHead = 37;
	public static readonly string[] ruleNames = {
		"noteSkin", "radiusOverride", "slideType", "int", "number", "modifiers", 
		"chart", "notations", "overlayStream", "waveTimeSig", "noteGroup", "eachNote", 
		"bpmTag", "absulouteStepTag", "metTag", "commandTag", "note", "noiseZone", 
		"borrowedNote", "borrowedCarrierPart", "slideCodeNote", "tap", "touchStar", 
		"hold", "tapHold", "touch", "touchHold", "duration", "beats", "slideDuration", 
		"waitTime", "asBpm", "slide", "touchHead", "sharedHeadSlide", "slideBody", 
		"holdSlideHead", "touchHoldSlideHead"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "'/'", "'('", "')'", "'{'", "'#'", "'}'", "'h'", "'['", "']'", 
		"':'", "'##'", "'*'", null, null, "','", null, null, null, null, null, 
		null, "'@'", null, null, null, null, null, null, null, null, "'E'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "WS", "COMMENT", "COMMA", "TOUCH_RADIUS", "NOTE_SKIN", "BORROW_PATH", 
		"TAP_TO_STAR", "OVERLAY_STREAM", "WAVE_TIME_SIG", "STAR_TO_TAP", "NO_STAR", 
		"KEY", "TOUCH_AREA", "NOISE_ZONE", "D_ZONE", "SLIDE_CODE", "SLIDE_TYPE", 
		"INT", "CHART_END", "COMMAND", "MODIFIER", "FALSE_EACH"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Simai.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SimaiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SimaiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SimaiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class NoteSkinContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTE_SKIN() { return GetToken(SimaiParser.NOTE_SKIN, 0); }
		public NoteSkinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_noteSkin; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNoteSkin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NoteSkinContext noteSkin() {
		NoteSkinContext _localctx = new NoteSkinContext(Context, State);
		EnterRule(_localctx, 0, RULE_noteSkin);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(NOTE_SKIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RadiusOverrideContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOUCH_RADIUS() { return GetToken(SimaiParser.TOUCH_RADIUS, 0); }
		public RadiusOverrideContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_radiusOverride; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRadiusOverride(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RadiusOverrideContext radiusOverride() {
		RadiusOverrideContext _localctx = new RadiusOverrideContext(Context, State);
		EnterRule(_localctx, 2, RULE_radiusOverride);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(TOUCH_RADIUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SlideTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLIDE_TYPE() { return GetToken(SimaiParser.SLIDE_TYPE, 0); }
		public SlideTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_slideType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSlideType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SlideTypeContext slideType() {
		SlideTypeContext _localctx = new SlideTypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_slideType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(SLIDE_TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] KEY() { return GetTokens(SimaiParser.KEY); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEY(int i) {
			return GetToken(SimaiParser.KEY, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INT() { return GetTokens(SimaiParser.INT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT(int i) {
			return GetToken(SimaiParser.INT, i);
		}
		public IntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_int; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntContext @int() {
		IntContext _localctx = new IntContext(Context, State);
		EnterRule(_localctx, 6, RULE_int);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 82;
				_la = TokenStream.LA(1);
				if ( !(_la==KEY || _la==INT) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==KEY || _la==INT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IntContext[] @int() {
			return GetRuleContexts<IntContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IntContext @int(int i) {
			return GetRuleContext<IntContext>(i);
		}
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 8, RULE_number);
		int _la;
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case KEY:
			case INT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				@int();
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 88;
					Match(T__0);
					State = 90;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==KEY || _la==INT) {
						{
						State = 89;
						@int();
						}
					}

					}
				}

				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 94;
				Match(T__0);
				State = 95;
				@int();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModifiersContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MODIFIER() { return GetTokens(SimaiParser.MODIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MODIFIER(int i) {
			return GetToken(SimaiParser.MODIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TAP_TO_STAR() { return GetTokens(SimaiParser.TAP_TO_STAR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAP_TO_STAR(int i) {
			return GetToken(SimaiParser.TAP_TO_STAR, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STAR_TO_TAP() { return GetTokens(SimaiParser.STAR_TO_TAP); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAR_TO_TAP(int i) {
			return GetToken(SimaiParser.STAR_TO_TAP, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NO_STAR() { return GetTokens(SimaiParser.NO_STAR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NO_STAR(int i) {
			return GetToken(SimaiParser.NO_STAR, i);
		}
		public ModifiersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modifiers; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModifiers(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModifiersContext modifiers() {
		ModifiersContext _localctx = new ModifiersContext(Context, State);
		EnterRule(_localctx, 10, RULE_modifiers);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17206083584L) != 0)) {
				{
				{
				State = 98;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17206083584L) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				}
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NotationsContext[] notations() {
			return GetRuleContexts<NotationsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotationsContext notations(int i) {
			return GetRuleContext<NotationsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SimaiParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SimaiParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SimaiParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHART_END() { return GetToken(SimaiParser.CHART_END, 0); }
		public ChartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChartContext chart() {
		ChartContext _localctx = new ChartContext(Context, State);
		EnterRule(_localctx, 12, RULE_chart);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 104;
					notations();
					State = 105;
					Match(COMMA);
					}
					} 
				}
				State = 111;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 112;
			notations();
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CHART_END) {
				{
				State = 113;
				Match(CHART_END);
				}
			}

			State = 116;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NotationsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BpmTagContext[] bpmTag() {
			return GetRuleContexts<BpmTagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BpmTagContext bpmTag(int i) {
			return GetRuleContext<BpmTagContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AbsulouteStepTagContext[] absulouteStepTag() {
			return GetRuleContexts<AbsulouteStepTagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AbsulouteStepTagContext absulouteStepTag(int i) {
			return GetRuleContext<AbsulouteStepTagContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetTagContext[] metTag() {
			return GetRuleContexts<MetTagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MetTagContext metTag(int i) {
			return GetRuleContext<MetTagContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandTagContext[] commandTag() {
			return GetRuleContexts<CommandTagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandTagContext commandTag(int i) {
			return GetRuleContext<CommandTagContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OverlayStreamContext[] overlayStream() {
			return GetRuleContexts<OverlayStreamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OverlayStreamContext overlayStream(int i) {
			return GetRuleContext<OverlayStreamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaveTimeSigContext[] waveTimeSig() {
			return GetRuleContexts<WaveTimeSigContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaveTimeSigContext waveTimeSig(int i) {
			return GetRuleContext<WaveTimeSigContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NoteGroupContext noteGroup() {
			return GetRuleContext<NoteGroupContext>(0);
		}
		public NotationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notations; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NotationsContext notations() {
		NotationsContext _localctx = new NotationsContext(Context, State);
		EnterRule(_localctx, 14, RULE_notations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8596226088L) != 0)) {
				{
				State = 124;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 118;
					bpmTag();
					}
					break;
				case 2:
					{
					State = 119;
					absulouteStepTag();
					}
					break;
				case 3:
					{
					State = 120;
					metTag();
					}
					break;
				case 4:
					{
					State = 121;
					commandTag();
					}
					break;
				case 5:
					{
					State = 122;
					overlayStream();
					}
					break;
				case 6:
					{
					State = 123;
					waveTimeSig();
					}
					break;
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35399925760L) != 0)) {
				{
				State = 129;
				noteGroup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OverlayStreamContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OVERLAY_STREAM() { return GetToken(SimaiParser.OVERLAY_STREAM, 0); }
		public OverlayStreamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_overlayStream; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimaiVisitor<TResult> typedVisitor = visitor as ISimaiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOverlayStream(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OverlayStreamContext overlayStream() {
		OverlayStreamContext _localctx = new OverlayStreamContext(Context, State);
		EnterRule(_localctx, 16, RULE_overlayStream);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			Match(OVERLAY_STREAM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
